--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test:curl": "NODE_ENV=development sh bin/curl.sh",
-    "test:print": "NODE_ENV=development sh bin/print.sh",
     "start": "node lib/server",
     "start:dev": "NODE_ENV=development node lib/server"
   },
@@ -26,6 +24,7 @@
   "dependencies": {
     "config": "^3.2.2",
     "fastify": "^2.7.1",
+    "fastify-bearer-auth": "^4.2.0",
     "fastify-formbody": "^3.1.0",
     "fastify-redis": "^3.1.1",
     "lodash": "^4.17.15",
