--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "fastify-bearer-auth": "^4.2.0",
     "fastify-formbody": "^3.1.0",
     "fastify-redis": "^3.1.1",
+    "fastify-websocket": "^1.0.0",
     "ioredis": "^4.14.0",
     "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
