--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "fastify": "^2.7.1",
     "fastify-bearer-auth": "^4.2.0",
     "fastify-formbody": "^3.1.0",
+    "fastify-helmet": "^3.0.2",
     "fastify-redis": "^3.1.1",
     "fastify-websocket": "^1.0.0",
     "ioredis": "^4.14.0",
