--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "config": "^3.2.2",
+    "expect": "^24.9.0",
     "fastify": "^2.7.1",
     "fastify-bearer-auth": "^4.2.0",
     "fastify-formbody": "^3.1.0",
